# python-assignment

./: .coverage  .gitignore  README.md  di.py  injector.py  main.py  pyproject.toml  pytest.sh  run-script.sh  service_start.sh
config/: log_config.py
controller/: rest_api_router.py
dataset/: a.txt  b.txt  output_a.txt  output_b.txt
inject/: injector.py
repository/: schema.py
service/: rest_api_service.py
service/handler/: util_handler.py
test-reports/junit/: pytest.xml
tests/: conftest.py  test_api.py  test_lookup.py
tools/: lookup_keys_script.py
