[tool.poetry]
name = "python-assignment"
version = "0.1.0"
description = ""
authors = ["euiyounghwang <marieuig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pytz = "^2023.3.post1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
python-dotenv = "^1.0.0"
httpx = "^0.25.1"
asyncio = "^3.4.3"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
